WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
297408
[cleanup] addOverflowFromChild's delta is not just a "random" offset
https://bugs.webkit.org/show_bug.cgi?id=297408
Summary
[cleanup] addOverflowFromChild's delta is not just a "random" offset
alan
Reported
2025-08-14 11:13:47 PDT
it's always the child's position relative to _this_ renderer.
Attachments
Patch
(13.38 KB, patch)
2025-08-14 11:20 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.50 KB, patch)
2025-08-14 11:38 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
[fast-cq]Patch
(13.42 KB, patch)
2025-08-14 12:43 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-08-14 11:20:26 PDT
Created
attachment 476406
[details]
Patch
alan
Comment 2
2025-08-14 11:38:56 PDT
Created
attachment 476407
[details]
Patch
alan
Comment 3
2025-08-14 12:43:38 PDT
Created
attachment 476410
[details]
[fast-cq]Patch
EWS
Comment 4
2025-08-15 05:03:18 PDT
Committed
298749@main
(43bae17178cc): <
https://commits.webkit.org/298749@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 476410
[details]
.
Radar WebKit Bug Importer
Comment 5
2025-08-15 05:04:17 PDT
<
rdar://problem/158398657
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug