[cleanup] addOverflowFromChild's delta is not just a "random" offset https://bugs.webkit.org/show_bug.cgi?id=297408

Reviewed by Antti Koivisto.

The incoming 'delta' value in addOverflowFromChild is always the child's
position relative to _this_ container.
It's either
1. just the renderer's location (this is the most common case)
2. or in case of floats where the float renderer may be under a different container
and just overhanging, the adjusted offset.

* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::addOverflowFromBlockChildren):
(WebCore::RenderBlock::addOverflowFromOutOfFlowBoxes):
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::computeOverflow):
(WebCore::RenderBlockFlow::addOverhangingFloats):
(WebCore::RenderBlockFlow::addOverflowFromFloats): Deleted.
* Source/WebCore/rendering/RenderBlockFlow.h:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::addOverflowFromInFlowChildOrAbsolutePositionedDescendant):
(WebCore::RenderBox::addOverflowFromFloatBox):
(WebCore::RenderBox::addOverflowWithRendererOffset):
(WebCore::RenderBox::addVisualOverflow):
(WebCore::RenderBox::addOverflowFromChild): Deleted.
* Source/WebCore/rendering/RenderBox.h:
(WebCore::RenderBox::addOverflowFromChild): Deleted.
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::addOverflowFromChildren):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::computeOverflowFromCells):

Canonical link: https://commits.webkit.org/298749@main