Source/WebCore/rendering/RenderBlockFlow.h
@@ -463,7 +463,6 @@ protected:
     // Called to lay out the legend for a fieldset or the ruby text of a ruby run. Also used by multi-column layout to handle
     // the flow thread child.
     void layoutExcludedChildren(RelayoutChildren) override;
-    void addOverflowFromFloats();
 
 private:
     bool recomputeLogicalWidthAndColumnWidth();
